# llmchat

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
llmchat/: __init__.py  chat.py  cli.py  config.py  routing.py  storage.py
llmchat/extensions/: __init__.py  commands.py  discovery.py  hooks.py  plugins.py  skills.py
llmchat/mcp/: __init__.py  approval.py  manager.py  types.py
llmchat/providers/: __init__.py  anthropic_provider.py  base.py  google_provider.py  ollama_provider.py  openai_provider.py
tests/: test_smoke.py
